--- a/app/templates/compra/create_com.html
+++ b/app/templates/compra/create_com.html
@@ -5,6 +5,7 @@ Crea Nueva Compra
 {% endblock %}
     
 {% block content %}
+<h1><center>Nueva compra</center></h1>
 <div class="form-container">
    <form method="post">
         {{ form.csrf_token }}
