--- a/app/templates/user/profile.html
+++ b/app/templates/user/profile.html
@@ -5,6 +5,7 @@ Profile
 {% endblock %}
 
 {% block content %}
+<center><h1>Mi Perfil</h1></center>
 <div>
     {% if image %}
         <img src="{{ url_for('static', filename='images/profiles/' + image) }}" 
