--- a/app/templates/compra/create_com.html
+++ b/app/templates/compra/create_com.html
@@ -1,11 +1,11 @@
 {% extends 'base.html' %}
 
 {% block title %}
-Crea Nueva Compra
+Crea Nueva Venta
 {% endblock %}
     
 {% block content %}
-<h1><center>Nueva compra</center></h1>
+<h1><center>Nueva Venta</center></h1>
 <div class="form-container">
    <form method="post">
         {{ form.csrf_token }}
