--- a/app/templates/home/home.html
+++ b/app/templates/home/home.html
@@ -60,5 +60,5 @@
 <div class="image-movimiento">
   <img src="{{ url_for('static', filename='images/11.jpg') }}" width="100%" alt="wqdwqd">
 </div>
-<p>Autor: {{ name }}</p>
+<p>Autor: {{ user }}</p>
 {% endblock %}
