--- a/app/templates/compra/compra.html
+++ b/app/templates/compra/compra.html
@@ -1,12 +1,12 @@
 {% extends 'base.html' %}
 
 {% block title %}
-Compras
+Ventas
 {% endblock title %}
 
 {% block content %}
-    <h1>Compras</h1>
-    <a href="{{ url_for('compra.create_com') }}" class="btn">Nueva Compra</a>
+    <h1>Ventas</h1>
+    <a href="{{ url_for('compra.create_com') }}" class="btn">Nueva Venta</a>
     <h2>Lista de Productos</h2>
     <table id="compra">
         <thead>
