--- a/app/templates/home/contact.html
+++ b/app/templates/home/contact.html
@@ -34,6 +34,7 @@
         max-width: 1200px;
         margin: 0 auto;
         padding: 20px;
+        margin-bottom: 50px;
       }
   
       .team-member {
@@ -47,6 +48,7 @@
         height: 120px;
         border-radius: 50%;
         margin-right: 20px;
+        margin-bottom: 50px;
       }
   
       .team-member h2 {
@@ -56,6 +58,7 @@
       .team-member p {
         margin: 0;
         font-size: 16px;
+        margin-bottom: 50px;
       }
     </style>
   </head>
