--- a/app/templates/proveedor/create_prov.html
+++ b/app/templates/proveedor/create_prov.html
@@ -5,6 +5,7 @@ Registra nuevo Proveedor
 {% endblock %}
     
 {% block content %}
+<CEnter><h1>Nuevo Proveedor</h1></CEnter>
 <div class="form-container">
    <form method="post">
         {{ form.csrf_token }}
