--- a/app/static/css/styles.css
+++ b/app/static/css/styles.css
@@ -1,8 +1,24 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap');
 
+@media (max-width: 768px) {
+    /* Estilos para dispositivos móviles */
+}
+  
+@media (min-width: 769px) and (max-width: 1024px) {
+    /* Estilos para tabletas */
+}
+  
+@media (min-width: 1025px) {
+    /* Estilos para pantallas de escritorio */
+}
+img {
+  max-width: 100%;
+  height: auto;
+}
+
 body {
     font-family: 'Roboto', sans-serif;
-    background-color: #f5f5f5;
+    background-color: #fbfbfb;
     margin: 0;
     padding: 0;
     box-sizing: border-box;
@@ -91,6 +107,7 @@ nav li a:hover {
     border-radius: 5px;
     margin-bottom: 50px;
 }
+
 /* Tablas */
 table {
     font-family: 'Roboto', sans-serif;
