--- a/app/templates/compra/compra.html
+++ b/app/templates/compra/compra.html
@@ -8,12 +8,13 @@ Ventas
     <h1>Ventas</h1>
     <a href="{{ url_for('compra.create_com') }}" class="btn">Nueva Venta</a>
     <h2>Lista de Productos</h2>
+   
     <table id="compra">
         <thead>
+           
             <tr>
                 <th>ID</th>
-                <th>id_ticket</th>
-                <th>id_cliente</th>
+                <th>ticket</th>
                 <th>Fecha</th>
                 <th>Cantidad</th>
                 <th>Acciones</th>
@@ -23,23 +24,18 @@ Ventas
             {% for com in compra %}
                 <tr>
                     <td>{{ com.id_compra }}</td>
-                    <td>{{ com.id_ticket }}</td>
-                    <td>{{ com.id_cliente }}</td>
-                    <td>{{ com.id_producto }}</td>
+                    <td>{{ com.ticket }}</td>
+                    
                     <td>{{ com.fecha_compra }}</td>
                     <td>{{ com.cantidad_compra }}</td>
                     <td>{{ com.total_compra }}</td>
                     <td>
-                        <a href="{{ url_for('compra.update_com', id_compra=com.id_compra) }}">
+                        {{com.id_compra}}
+                        <a href="{{ url_for('compra.create_com', id_compra=com.id_compra) }}">
                             <i class="fa fa-pencil"></i>
-                    </a>
-                    <form action="{{ url_for('compra.delete_com', id_compra=com.id_compra) }}" method="post">
-                        <button type="submit" onclick="return confirm('Seguro de que quieres eliminar')">
-                            <i class="fa fa-trash"></i>
-                        </button>
-                    </form>
+                        </a>
                     </td>
-                </tr>
+                </tr>   
             {% endfor %}
         </tbody>
     </table>
