--- a/app/templates/proveedor/proveedor.html
+++ b/app/templates/proveedor/proveedor.html
@@ -15,6 +15,7 @@ Proveedor
                 <th>Nombre</th>
                 <th>Apellido Paterno</th>
                 <th>Apellido Materno</th>
+                <th>Marca</th>
                 <th>Direccion</th>
                 <th>Correo</th>
                 <th>Telefono</th>
@@ -28,6 +29,7 @@ Proveedor
                     <td>{{ prov.nombre_proveedor }}</td>
                     <td>{{ prov.a_paterno }}</td>
                     <td>{{ prov.a_materno }}</td>
+                    <td>{{ prov.marca_proveedor }}</td>
                     <td>{{ prov.direccion_proveedor }}</td>
                     <td>{{ prov.correo_proveedor }}</td>
                     <td>{{ prov.telefono_proveedor }}</td>
