--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -1,39 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/styles.css') }}">
+    <link href="https://unpkg.com/vue3-easy-data-table/dist/style.css" rel="stylesheet">
+    <script src="https://cdn.jsdelivr.net/npm/vue@3.2.1/dist/vue.global.js"></script>
+    <script src="https://unpkg.com/vue3-easy-data-table"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
+
+
+
     <title>{% block title %}{% endblock %}</title>
 </head>
-<body>
-    {% include 'navigation.html' %}
-    <!-- <nav>
-        <ul>
-            <img src="{{ url_for('static', filename='images/maiker.jpg')}}" alt="Logo de Mi Sitio" class="logo-footer">
-            {% if user %}
-            {{ current_user }}
-            <li><a href="{{ url_for('home.home') }}">Inicio</a></li>
-            <li><a href="{{ url_for('home.contact') }}">Acerca de</a></li>
-            <li><a href="{{ url_for('product.producto') }}">Productos</a></li>
-            <li><a href="{{ url_for('proveedor.proveedor') }}">Proveedores</a></li>
-            <li><a href="{{ url_for('cliente.cliente') }}">Clientes</a></li>
-            <li><a href="{{ url_for('compra.compra') }}">Compra</a></li>
-            <li><a href="{{ url_for('user.logout') }}">Cerrar Sesion</a></li>
-            {% else %}
-            {% endif %}
-            {% if user %}
-            {% else %}
-            <li><a href="{{ url_for('home.home') }}">Inicio</a></li>
-            <li><a href="{{ url_for('home.contact') }}">Acerca de</a></li>
-            <li><a href="{{ url_for('user.register') }}">Registro</a></li>
-            <li><a href="{{ url_for('user.login') }}">Iniciar Sesión</a></li>
-            {% endif %}
 
-            
-        </ul>
-    </nav> -->
+<body>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
+    {% include 'navigation.html' %}
+
     <div class="container">
         {% block content %}
         {% endblock %}
@@ -44,7 +30,11 @@
         <p>© 2023 Todos los derechos reservados.</p>
         <br>
         <p><a href="https://goo.gl/maps/zLWxYZyaUy5npMsW9" class="url">Visita nuestro lugar</a></p>
-        
+
     </footer>
+  
+
+    <script type="text/javascript" src="{{url_for('static', filename='js/index.js')}}"></script>
 </body>
+
 </html>
