--- a/app/templates/proveedor/create_prov.html
+++ b/app/templates/proveedor/create_prov.html
@@ -1,10 +1,12 @@
 {% extends 'base.html' %}
 
+
 {% block title %}
 Registra nuevo Proveedor
 {% endblock %}
     
 {% block content %}
+
 <CEnter><h1>Nuevo Proveedor</h1></CEnter>
 <div class="form-container">
    <form method="post">
@@ -35,6 +37,15 @@ Registra nuevo Proveedor
                  <p>{{ error }}</p>
                  {% endfor %}
                  {% endif %}
+        </div>
+        <div>
+                {{ form.marca_proveedor.label }}
+                {{ form.marca_proveedor() }}
+                {% if form.marca_proveedor.errors %}
+                   {% for error in form.marca_proveedor.errors%}
+                   <p>{{ error }}</p>
+                   {% endfor %}
+                {% endif %}
         </div>
         <div>
                 {{ form.direccion_proveedor.label }}
@@ -70,3 +81,4 @@ Registra nuevo Proveedor
    </form>
 </div>
 {% endblock %}
+
