--- a/app/templates/compra/compra.html
+++ b/app/templates/compra/compra.html
@@ -17,6 +17,7 @@ Ventas
                 <th>ticket</th>
                 <th>Fecha</th>
                 <th>Cantidad</th>
+                <th>Total</th>
                 <th>Acciones</th>
             </tr>
         </thead>
@@ -25,7 +26,6 @@ Ventas
                 <tr>
                     <td>{{ com.id_compra }}</td>
                     <td>{{ com.ticket }}</td>
-                    
                     <td>{{ com.fecha_compra }}</td>
                     <td>{{ com.cantidad_compra }}</td>
                     <td>{{ com.total_compra }}</td>
