--- a/app/templates/navigation.html
+++ b/app/templates/navigation.html
@@ -1,39 +1,31 @@
 <header>
-    
     <nav>
         <ul>
-           
+            <!-- <button class, id="atras"><-</button>
+            <button class, id="adelante">-></button>
+            <script>
+                document.getElementById("atras").addEventListener("click", function() {
+                    history.back();
+                });
+                document.getElementById("adelante").addEventListener("click", function() {
+                    history.forward();
+                });
+            </script> -->
             <img src="{{ url_for('static', filename='images/maiker.jpg')}}" alt="Logo de Mi Sitio" class="logo-footer">
             {% if "name" in session and session.get("name")  %}
             <li>
                 <a href="{{ url_for('user.profile', id=session.get('id')) }}">Perfil</a>
             </li>
-            
                 {% for link in nav %}
                     <li>
                         <a href="{{ link.ruta }}">{{ link.nombre }}</a>
                     </li>
-                    
                 {% endfor %}
-                
             {% else %}
                 <li><a href="{{ url_for('home.home') }}">Inicio</a></li>
                 <li><a href="{{ url_for('home.contact') }}">Acerca de</a></li>
                 <li><a href="{{ url_for('user.login') }}">Iniciar Sesión</a></li>
             {% endif %}
-            <button id="atras">Atrás</button>
-            <button id="adelante">Adelante</button>
-            
-            <script>
-                document.getElementById("atras").addEventListener("click", function() {
-                    history.back();
-                });
-            
-                document.getElementById("adelante").addEventListener("click", function() {
-                    history.forward();
-                });
-            </script>
         </ul>
-        
     </nav>
 </header>
